# techteapotcom

./: .gitignore  .gitmodules  CLAUDE.md  README.md  _redirects  config.toml  docker-compose.yml  gallerythumbs.sh  netlify.toml  wrangler.jsonc
archetypes/: posts.md
archetypes/post-bundle/: index.md
assets/: README.md
config/_default/: author.yaml  config.toml  config.yaml  markup.yaml  menu.yaml  params.yaml
config/development/: config.yaml
config/production/: config.yaml
content/: _index.md  about.html  about.md  contact.html  contact.md  privacy.md  subscribe.html  terms.md
content/categories/general/: _index.md
content/categories/network-management/: _index.md
content/categories/protocol-analysis/: _index.md
content/posts/: 2014-reading-log.md  21.md  37.md  _index.md  a-cloudy-solar-eclipse.md  a-few-days-on-the-beach.md  a-look-back-at-2009-from-a-business-service-management-perspective.md  a-new-dawn.md  a-perspective-on-open-source-network-monitoring-tools.md  a-real-world-example-of-the-problems-with-open-core-software.md  a-recovering-wunderkind.md  a-reminder-of-the-power-of-the-internet-again.md  a-reminder-of-the-power-of-the-internet.md  a-retrospective-on-dyna-project-version-0-1.md  a-review-of-2006-at-openxtra.html  a-review-of-2006-at-openxtra.md  a-review-of-2007-at-openxtra.md  a-start-to-2007.md  a-urinal-video-gameno-really.md  a-weee-farce.md  accessing-raw-data-in-intellipool-network-monitor.md  adding-anything-external-to-your-software-will-tripple-support.md  affordable-wireless-packet-capture-solution.md  agent-less-monitoring-equals-standards-based-monitoring.md  aint-no-such-thing-as-smb-class-kit.html  aint-no-such-thing-as-smb-class-kit.md  air-conditioner-status-point-photo-request.md  alarms-as-easy-as-123.html  alarms-as-easy-as-123.md  amazon-cloud-computing-service-applied-to-network-management.md  an-exploration-of-open-core-licensing-in-network-management.md  an-indication-of-heightened-competition-in-network-management.md  ann-introducing-the-tech-teapot.md  ann-new-blog-theme.md  another-gem-sqlite.html  another-gem-sqlite.md  are-network-management-apps-low-surface-area.md  are-operating-systems-important-anymore.md  automated-install-comes-to-open-source-net-projects.md  aviosys-9820-box-opening.md  (+384 more)
content/posts/aviosys-9820-box-opening/: index.md
content/posts/cabling-as-data-centre-art/: index.md
content/posts/code-performance-tuning-in-net/: index.md
content/posts/dia-the-open-source-visio/: index.md
content/posts/early-1990s-windows-dev-tools/: index.md
content/posts/hugo-in-action-review/: index.md
content/posts/jdsu-validatorpro-nt-nt1155-box-opening/: index.md
content/posts/new-aviosys-ip-power-9858-box-opening/: index.md
content/posts/new-avtech-room-alert-3w-box-opening/: index.md
content/series/: _index.md
content/tags/: _index.md
i18n/: en.yaml
layouts/partials/: head-additions.html
layouts/shortcodes/: foldergallery.html
research/: README.md
research/BRASS/: README.md
research/Big Brother/: README.md
research/RRDTool/: README.md
research/RRDTool/src/rrdtool-1.0.0/: CHANGES  CONTRIBUTORS  MANIFEST  Makefile.dist  Makefile.in  README  TODO  acconfig.h  config.h.in  configure  configure.in
research/RRDTool/src/rrdtool-1.0.0/cgilib-0.4/: Makefile.in  cgi.c
research/RRDTool/src/rrdtool-1.0.0/contrib/trytime/: Makefile  trytime
research/RRDTool/src/rrdtool-1.0.0/doc/: GNUmakefile.in  Makefile  RRDp.3  RRDp.txt  RRDs.3  RRDs.txt  bin_dec_hex.1  bin_dec_hex.txt  rrdcgi.1  rrdcgi.txt  rrdcreate.1  rrdcreate.html  rrdcreate.pod  rrdcreate.txt  rrddump.1  rrddump.txt  rrdfetch.1  rrdfetch.html  rrdfetch.pod  rrdfetch.txt  rrdgraph.1  rrdgraph.html  rrdgraph.pod  rrdgraph.txt  rrdlast.1  rrdlast.txt  rrdresize.1  rrdresize.txt  rrdrestore.1  rrdrestore.html  rrdrestore.pod  rrdrestore.txt  rrdtool.1  rrdtool.txt  rrdtune.1  rrdtune.txt  rrdtutorial.1  rrdtutorial.html  rrdtutorial.pod  rrdtutorial.txt  (+2 more)
research/RRDTool/src/rrdtool-1.0.0/examples/: piped-demo.pl.in  shared-demo.pl.in
research/RRDTool/src/rrdtool-1.0.0/gd1.3/: Makefile.in  gd.c
research/RRDTool/src/rrdtool-1.0.0/libpng-1.0.3/: Makefile.in
research/RRDTool/src/rrdtool-1.0.0/perl-piped/: RRDp.pm
research/RRDTool/src/rrdtool-1.0.0/perl-shared/: Makefile.PL  RRDs.pm  RRDs.xs  ntmake.pl
research/RRDTool/src/rrdtool-1.0.0/src/: Makefile.in  gdpng.c  gifsize.c  parsetime.c  pngsize.c  rrd.dsp  rrd_cgi.c  rrd_create.c  rrd_diff.c  rrd_dump.c  rrd_error.c  rrd_fetch.c  rrd_format.c  rrd_format.h  rrd_graph.c  rrd_last.c  rrd_open.c  rrd_resize.c  rrd_restore.c  rrd_tool.c  rrd_tool.h  rrd_tune.c  rrd_update.c  rrdtool.dsw
research/RRDTool/src/rrdtool-1.0.0/zlib-1.1.3/: Makefile.in
research/Tricklet/: README.md  Ticklet.txt
research/cricket/: Cricket.txt  README.md
research/mrtg/: MRTG.txt  README.md  oetiker-lisa98.ps  snmp.pl.md  versions.md
research/mrtg/src/mrtg-2.9.23/: ANNOUNCE  CHANGES  Makefile.in  configure.in
research/mrtg/src/mrtg-2.9.23/doc/: cfgmaker.1  cfgmaker.html  cfgmaker.txt  contrib.1  contrib.html  contrib.pod  contrib.txt  faq.1  faq.html  faq.pod  faq.txt  forum.1  forum.txt  index.html  index.txt  index.wml  indexmaker.1  indexmaker.html  indexmaker.txt  logfile.1  logfile.pod  logfile.txt  mibhelp.1  mibhelp.txt  mrtg-rrd.1  mrtg-rrd.txt  mrtg.1  mrtg.txt  mrtglib.1  mrtglib.txt  nt-guide.1  nt-guide.html  nt-guide.pod  nt-guide.txt  reference.1  reference.html  reference.pod  reference.txt  squid.1  squid.html  (+7 more)
research/mrtg/src/mrtg-2.9.23/lib/mrtg2/: MRTG_lib.pm
research/mrtg/src/mrtg-2.9.23/src/: rateup.c
research/mrtg/src/mrtg-2.9.23/translate/: locales_mrtg.pm
research/scotty/: README.md
scripts/: build.sh  bundlify.py  checklinks.sh  checkredirects.sh  checksitemap.sh  gallerythumbs.sh
src/: .gitignore
src/archetypes/: article.md  articles.md
src/content/: _index.md  about.md  contact.md  privacy.md  subscribe.md  terms.md
src/layouts/: robots.txt
src/static/: _redirects
static/: _redirects  robots.txt
static/css/: image.css
(+1529 files in other folders)
